--- a/basket.html
+++ b/basket.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>bascket</h1>
-    <table>
+    <table style="border: 1px solid black;">
         <tr>
             <th>image</th>
             <td><img src="image.jpg"></td>
