--- a/product.html
+++ b/product.html
@@ -1,13 +1,44 @@
+<!DOCTYPE html>
 <html>
-    <head>
-<title>product</title>
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
 
+li {
+  float: left;
+}
 
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
 
-    </head>
-    <body>
-       <img src="parfum.jpeg" alt="parfum"> 
+li a:hover {
+  background-color: #111;
+}
+</style>
+</head>
+<body>
 
-    </body>
-
+<ul>
+   <li><img src="flawerr.jpg" alt="log" width="30" height="30"></li>
+   <li><a class="active" href="#home">Home</a></li>
+   <li><a href="home.html">News</a></li>
+   <li><a href="product.html">product</a></li>
+   <li><a href="gallery.html">gallery</a></li>
+   <li><a href="history.html">history</a></li>
+   <li><a href="basket.html">basket</a></li>
+   <li><a href="delivery.html">belivery</a></li>
+   <li><a href="contact.html">contact</a></li>
+</ul>
+</body> 
 </html>
