--- a/gallery.html
+++ b/gallery.html
@@ -3,17 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Online Store</title>
-    <style>
-        /* Add your CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-        }
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Online Store</title>
     <style>
         body {
@@ -43,10 +32,20 @@
             margin: 0;
             padding: 0;
             display: flex;
+		
         }
-
+		
+		
+        .nav-menu ul:hover {
+		background-color: blue;
+		
+		}
+		
+		
+	
         .nav-menu li {
             margin-right: 20px;
+			
         }
 
         .nav-menu a {
@@ -99,7 +98,7 @@
         <nav class="nav-menu">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="#">basket</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
