--- a/home.html
+++ b/home.html
@@ -1,27 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home</title>
+    <style>
+      body {
+        background-color: white;
+      }
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #38444d;
+      }
+
+      li {
+        float: left;
+      }
+
+      li a,
+      .dropbtn {
+        display: inline-block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      li a:hover,
+      .dropdown:hover .dropbtn {
+        background-color: red;
+      }
+
+      li.dropdown {
+        display: inline-block;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+      }
+
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+      }
+
+      .dropdown-content a:hover {
+        background-color: #f1f1f1;
+      }
+
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+    </style>
   </head>
   <body>
-    <h1><a href="../lamiss/index.html">home</a></h1>
-    <h1><a href="../lamiss/contact.html">contact</a></h1>
-    <h1><a href="../lamiss/product.html">product</a></h1>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#news">contact</a></li>
+      <li><a href="#home">delivery</a></li>
+      <li><a href="#news">basket</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#news">history</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#news">gallery</a></li>
+      <li><a href="#home">parfum</a></li>
+      <li><a href="#news">product</a></li>
 
-    <h1 style="background-color: rgb(211, 202, 186); height: 150px"></h1>
-
-    <h1>adresse:</h1>
-    <h1>
-      <a
-        href="https://www.facebook.com/profile.php?id=100083338052505&locale=fr_FR"
-        >f</a
-      >
-    </h1>
-    <h1><a href="../lamiss/">t</a></h1>
-    <h1><a href="../lamiss/">in</a></h1>
-    <br /><br />
+      
   </body>
 </html>
